--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     width: 100%;
     color: white;
     margin-bottom: 0;
-    background-image: linear-gradient(to right, #0058c7, #0078d7, #0058c7);*/
+    background-image: linear-gradient(to right, #0058c7, #0078d7, #0058c7);
     background-color: #0078d7;
 }
 
